<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chess</string>
    <string name="action_settings">Settings</string>
    <string name="tile_description">Tile</string>
    <string name="promotion_title">Promotion!</string>
    <string name="promotion_text">Select a piece to promote to</string>
    <string name="description_queen">Queen</string>
    <string name="description_rook">Rook</string>
    <string name="description_bishop">Bishop</string>
    <string name="description_knight">Knight</string>
    <string name="btn_new_game">Rematch</string>
    <string name="btn_main_menu">Main Menu</string>
    <string name="title_draw">Draw!</string>
    <string name="title_win_checkmate">Checkmate!</string>
    <string name="title_win_timeout">Out of time!</string>
    <string name="title_win_resign">Resignation!</string>
    <string name="txt_draw_repetition">Draw by repetition!</string>
    <string name="txt_draw_claimed">Draw has been claimed through 50-move rule!</string>
    <string name="txt_draw_agreed">Draw by agreement!</string>
    <string name="txt_win_checkmate">has won by checkmate!</string>
    <string name="txt_win_resign_1">resigned!</string>
    <string name="txt_win_resign_2">wins!</string>
    <string name="txt_win_timeout_1">is out of time!</string>
    <string name="txt_win_timeout_2">wins!</string>
    <string name="txt_draw_stalemate">Draw by stalemate!</string>
    <string name="txt_white_name">White name</string>
    <string name="txt_black_name">Black name</string>
    <string name="etxt_default_white_name">White</string>
    <string name="etxt_default_black_name">Black</string>
    <string name="txt_time">Time per player</string>
    <string name="txt_minutes">Minutes</string>
    <string name="txt_seconds">Seconds</string>
    <string name="etxt_default_minutes">0</string>
    <string name="etxt_default_seconds">0</string>
    <string name="txt_bonus">Bonus time per move</string>
    <string name="etxt_default_bonus_minutes">0</string>
    <string name="etxt_default_bonus_seconds">0</string>
    <string name="btn_start">Start game</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="title_invalid_input">Invalid input!</string>
    <string name="txt_invalid_time">Time fields must only contain numbers</string>
    <string name="txt_invalid_name">Name fields must be filled out</string>
    <string name="txt_same_name">Both players cannot have the same name</string>
    <string name="txt_illegal_char">Name fields must only contain letters</string>
    <string name="txt_check">Check</string>
    <string name="txt_checkmate">Checkmate</string>
    <string name="txt_winner">Winner</string>
    <string name="txt_draw">Draw</string>
    <string name="txt_resign">Resigned</string>
    <string name="txt_timeout">Out of time</string>
    <string name="txt_white_move">White to move</string>
    <string name="txt_black_move">Black to move</string>
    <string name="txt_game_over">Game Over</string>
    <string name="btn_offer_draw">Offer Draw</string>
    <string name="btn_claim_draw">Claim Draw</string>
    <string name="btn_resign">Resign</string>
    <string name="btn_quit">End</string>
    <string name="title_draw_offer">Draw offered</string>
    <string name="txt_draw_offer">has offered you a draw</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_annotations">Annotations</string>
    <string name="btn_view_board">View board</string>
    <string name="btn_copy">Copy to clipboard</string>
    <string name="toast_annotations">Annotations have been copied to clipboard</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_statistics">STATISTICS</string>
    <string name="btn_settings">SETTINGS</string>
    <string name="toast_loading">Loading saved game…</string>
    <string name="txt_white_win_count">White wins:</string>
    <string name="txt_black_win_count">Black wins:</string>
    <string name="txt_draw_count">Draws:</string>

</resources>