<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameSettingsActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_white_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_white_name" />

        <EditText
            android:id="@+id/etxt_white_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_white_name"
            android:ems="10"
            android:inputType="textCapSentences|textVisiblePassword"
            android:selectAllOnFocus="true"
            android:text="@string/etxt_default_white_name" >
        </EditText>

        <TextView
            android:id="@+id/txt_black_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_white_name"
            android:text="@string/txt_black_name" />

        <EditText
            android:id="@+id/etxt_black_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_black_name"
            android:ems="10"
            android:inputType="textCapSentences|textVisiblePassword"
            android:selectAllOnFocus="true"
            android:text="@string/etxt_default_black_name" >
        </EditText>

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_black_name"
            android:layout_marginTop="10dp"
            android:text="@string/txt_time" />

        <TextView
            android:id="@+id/txt_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_time"
            android:text="@string/txt_minutes" />

        <TextView
            android:id="@+id/txt_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etxt_seconds"
            android:layout_alignLeft="@+id/etxt_seconds"
            android:text="@string/txt_seconds" />

        <EditText
            android:id="@+id/etxt_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_minutes"
            android:ems="5"
            android:inputType="number"
            android:nextFocusDown="@id/etxt_seconds"
            android:selectAllOnFocus="true"
            android:text="@string/etxt_default_minutes" >
        </EditText>

        <EditText
            android:id="@+id/etxt_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/etxt_minutes"
            android:layout_toRightOf="@+id/etxt_minutes"
            android:ems="5"
            android:inputType="number"
            android:nextFocusDown="@+id/etxt_bonus_minutes"
            android:selectAllOnFocus="true"
            android:text="@string/etxt_default_seconds" >
        </EditText>

        <TextView
            android:id="@+id/txt_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_minutes"
            android:layout_marginTop="10dp"
            android:text="@string/txt_bonus" />

        <TextView
            android:id="@+id/txt_bonus_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_bonus"
            android:text="@string/txt_minutes" />

        <TextView
            android:id="@+id/txt_bonus_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etxt_bonus_seconds"
            android:layout_alignLeft="@+id/etxt_bonus_seconds"
            android:text="@string/txt_seconds" />

        <EditText
            android:id="@+id/etxt_bonus_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_bonus_minutes"
            android:ems="5"
            android:inputType="number"
            android:nextFocusDown="@id/etxt_bonus_seconds"
            android:selectAllOnFocus="true"
            android:text="@string/etxt_default_bonus_minutes" >
        </EditText>

        <EditText
            android:id="@+id/etxt_bonus_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/etxt_bonus_minutes"
            android:layout_toRightOf="@+id/etxt_bonus_minutes"
            android:ems="5"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/etxt_default_bonus_seconds" >
        </EditText>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_bonus_minutes"
            android:text="@string/btn_start" >
        </Button>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_bonus_minutes"
            android:layout_toRightOf="@+id/btn_start"
            android:text="@string/btn_cancel" />
    </RelativeLayout>

</ScrollView>