<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table_end_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/txt_endgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/btn_new_game"
            style="android:attr/buttonBarStyle"
            android:layout_width="0.0dip"
            android:layout_height="55dp"
            android:layout_weight="1.0"
            android:text="@string/btn_new_game" />

        <Button
            android:id="@+id/btn_main_menu"
            style="android:attr/buttonBarStyle"
            android:layout_width="0.0dip"
            android:layout_height="55dp"
            android:layout_weight="1.0"
            android:text="@string/btn_main_menu" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/btn_view_annotations"
            style="android:attr/buttonBarStyle"
            android:layout_width="0.0dip"
            android:layout_height="55dp"
            android:layout_weight="1.0"
            android:text="@string/btn_annotations" />

        <Button
            android:id="@+id/btn_view_board"
            style="android:attr/buttonBarStyle"
            android:layout_width="0.0dip"
            android:layout_height="55dp"
            android:layout_weight="1.0"
            android:text="@string/btn_view_board" />
    </TableRow>

</TableLayout>