<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

    <TextView
        android:id="@+id/txt_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/blackFrame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/standard_space_large"
        android:gravity="center"
        android:text="@string/txt_white_move"
        android:background="@drawable/rectangle"
        android:textSize="@dimen/txt_move_size" />

    <hioa.android.chess.PlayerFrame
        android:id="@+id/blackFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chessboard"
        android:layout_marginBottom="@dimen/standard_space_medium" />

    <hioa.android.chess.ChessboardView
        android:id="@+id/chessboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <hioa.android.chess.PlayerFrame
        android:id="@+id/whiteFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chessboard"
        android:layout_marginTop="@dimen/standard_space_medium" />

    <Button
        android:id="@+id/btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whiteFrame"
        android:layout_marginTop="@dimen/standard_space_small"
        android:text="@string/btn_offer_draw" >
    </Button>

    <Button
        android:id="@+id/btn_resign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_draw"
        android:layout_alignTop="@+id/btn_draw"
        android:text="@string/btn_resign" >
    </Button>
    
    <Button
        android:id="@+id/btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_resign"
        android:layout_alignTop="@+id/btn_draw"
        android:text="@string/btn_quit" >
    </Button>

</RelativeLayout>