<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StatisticsActivity" >

    <ImageView
        android:id="@+id/img_stat_king_white"
        android:layout_width="@dimen/img_stat_king_size"
        android:layout_height="@dimen/img_stat_king_size"
        android:layout_above="@+id/txt_white_win_count"
        android:layout_marginBottom="@dimen/standard_space_large"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/txt_white_win_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_draw_count"
        android:layout_alignLeft="@+id/txt_draw_count"
        android:layout_marginBottom="@dimen/standard_space_medium"
        android:gravity="center"
        android:text="@string/txt_white_win_count"
        android:textSize="@dimen/txt_statistics_size" />

    <TextView
        android:id="@+id/txt_draw_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/txt_draw_count"
        android:textSize="@dimen/txt_statistics_size" />
    
    <TextView
        android:id="@+id/txt_black_win_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_draw_count"
        android:layout_below="@+id/txt_draw_count"
        android:layout_marginTop="@dimen/standard_space_medium"
        android:gravity="center"
        android:text="@string/txt_black_win_count"
        android:textSize="@dimen/txt_statistics_size" />
    
     <ImageView
        android:id="@+id/img_stat_king_black"
        android:layout_width="@dimen/img_stat_king_size"
        android:layout_height="@dimen/img_stat_king_size"
        android:layout_below="@+id/txt_black_win_count"
        android:layout_marginTop="@dimen/standard_space_large"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
